apps/orp-or-planner-webapi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orp-or-planner-webapi
spec:
  replicas: 1
  selector:
    matchLabels:
      pod: orp-or-planner-webapi-label
  template:
    metadata:
      labels:
        pod: orp-or-planner-webapi-label
    spec:
      volumes:
        - name: init-scripts
          configMap:
            name: orp-or-planner-webapi-mongodb-init
      containers:
        - name: orp-or-planner-webapi
          image: xchromek/orp-or-planner-webapi:latest
          imagePullPolicy: Always
          ports:
            - name: webapi-port
              containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "0.01"
            limits:
              memory: "512Mi"
              cpu: "0.3"

        - name: openapi-ui
          image: swaggerapi/swagger-ui
          imagePullPolicy: Always
          ports:
            - name: api-ui
              containerPort: 8081
          resources:
            requests:
              memory: "16M"
              cpu: "0.01"
            limits:
              memory: "64M"
              cpu: "0.1"
