apps/orp-or-planner-webapi/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: orp-or-planner-webapi
spec:
  parentRefs:
    - name: wac-hospital-gateway
      namespace: wac-hospital
    - name: wac-hospital-gateway
      namespace: wac-hospital-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /orp-api
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /api
      backendRefs:
        - group: ""
          kind: Service
          name: orp-or-planner-webapi
          port: 80

    - matches:
        - path:
            type: PathPrefix
            value: /orp-openapi-ui
      backendRefs:
        - group: ""
          kind: Service
          name: orp-openapi-ui
          port: 80

    - matches:
        - path:
            type: Exact
            value: /orp-openapi
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /openapi
      backendRefs:
        - group: ""
          kind: Service
          name: orp-or-planner-webapi
          port: 80
